--- a/compromiso.html
+++ b/compromiso.html
@@ -319,10 +319,10 @@
 							<img src="img/com/18_james.jpg" class="img-responsive" />
 						</a>
 						<h4 class="mg-md text-center tc-black titulo">
-							James
+							Joy
 						</h4>
 						<div class="text-center">
-							<a href="com_james.html" class="btn btn-sm btn-sq btn-wire wire-btn-outer-space titulo">Ver más</a>
+							<a href="com_joy.html" class="btn btn-sm btn-sq btn-wire wire-btn-outer-space titulo">Ver más</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
